<resources>
    <string name="app_name" translatable="false">NoteBox</string>
    <string name="add_note">Add note</string>
    <string name="text_note">Text note</string>
    <string name="title">Title</string>
    <string name="all_notes">All notes</string>
    <string name="cancel">Cancel select</string>
    <string name="options">Options</string>
    <string name="select_all">Select all</string>
    <string name="selected">%1d Selected</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="grid_small">Grid (small)</string>
    <string name="grid_medium">Grid (medium)</string>
    <string name="list">List</string>
    <string name="create_date">Created date</string>
    <string name="sort_options">Sort options</string>
</resources>