<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:paddingBottom="60dp"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|snap">

            <LinearLayout
                android:id="@+id/headerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/all_notes_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_notes"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/amountOfNotes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.appcompat.widget.Toolbar
            style="@style/ThemeOverlay.AppCompat.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/select_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_checkbox_background"
                    android:button="@android:color/transparent"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/select_all_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:text="@string/select_all"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/allNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:alpha="0"
                android:text="@string/all_notes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/options"
                android:src="@drawable/three_dots_vertical_24" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:alpha="0.7"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorAccent" />

            <ImageView
                android:id="@+id/sorting_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/sort_options"
                android:src="@drawable/down_arrow" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?attr/colorSecondary"
        android:contentDescription="@string/add_note"
        android:src="@drawable/baseline_add_48"
        app:tint="@color/white" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:fitsSystemWindows="true"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
